docs/0.17/_sources/api/gammapy.modeling.models.TemporalModel.rst.txt
TemporalModel
=============

.. currentmodule:: gammapy.modeling.models

.. autoclass:: TemporalModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~TemporalModel.covariance
      ~TemporalModel.default_parameters
      ~TemporalModel.parameters

   .. rubric:: Methods Summary

   .. autosummary::

      ~TemporalModel.__call__
      ~TemporalModel.copy
      ~TemporalModel.create
      ~TemporalModel.from_dict
      ~TemporalModel.from_parameters
      ~TemporalModel.time_sum
      ~TemporalModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: parameters

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: time_sum
   .. automethod:: to_dict
