docs/0.20.1/_sources/api/gammapy.modeling.models.TemporalModel.rst.txt
TemporalModel
=============

.. currentmodule:: gammapy.modeling.models

.. autoclass:: TemporalModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~TemporalModel.covariance
      ~TemporalModel.default_parameters
      ~TemporalModel.frozen
      ~TemporalModel.parameters
      ~TemporalModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~TemporalModel.__call__
      ~TemporalModel.copy
      ~TemporalModel.freeze
      ~TemporalModel.from_dict
      ~TemporalModel.from_parameters
      ~TemporalModel.plot
      ~TemporalModel.reassign
      ~TemporalModel.sample_time
      ~TemporalModel.time_sum
      ~TemporalModel.to_dict
      ~TemporalModel.unfreeze

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: frozen
   .. autoattribute:: parameters
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: freeze
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: plot
   .. automethod:: reassign
   .. automethod:: sample_time
   .. automethod:: time_sum
   .. automethod:: to_dict
   .. automethod:: unfreeze
